# 3drenderer-pikuma

./: .gitignore  CMakeLists.txt  README.md
cmake/: deps.cmake  opts.cmake
src/: array.c  display.c  display.h  light.c  main.c  matrix.c  matrix.h  mesh.c  mesh.h  triangle.c  triangle.h  vector.c  vector.h
